--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="card">
+        <img src="profile.jpg" alt="Profile Picture" class="card__image">
+        <h2 class="card__name">John Doe</h2>
+        <p class="card__title">Web Developer</p>
+        <p class="card__description">Passionate about creating interactive and responsive web applications.</p>
+    </div>
 </body>
+
 </html>
